--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
   </head>
 
   <body>
-    <main id="main"></main>
+    <main id="main">
+      
+      
+    </main>
     <script src="js/index.js"></script>
   </body>
 
